--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
   },
   "include": [
     "node_modules/@stacks/clarinet-sdk/vitest-helpers/src",
-    "tests"
+    "tests",
+    "src",
+    "chainhooks"
   ]
 }
